Fixes casestudy next / sidebar overlap issue

--- a/src/components/CaseStudy/CaseStudy.scss
+++ b/src/components/CaseStudy/CaseStudy.scss
@@ -18,10 +18,14 @@
       }
     }
   }
-}
 
-.modal__content {
-  background-color: $white;
+  .modal__content {
+    padding-bottom: 17rem;
+    // media queries
+    @include breakpoint($mobile-lg) {
+      padding-bottom: 11.4rem;
+    }
+  }
 }
 
 .casestudy__title {
@@ -161,7 +165,7 @@
   bottom: 0;
   left: -8rem;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   // media queries
   @include breakpoint($mobile-lg) {
     border-left: 1rem solid;
@@ -232,14 +236,6 @@
     @include breakpoint($mobile-sm) {
       font-size: 2.8rem;
     }
-  }
-}
-
-.casestudy__modal .modal__with-sidebar > div {
-  padding-bottom: 17rem;
-  // media queries
-  @include breakpoint($mobile-lg) {
-    padding-bottom: 11.4rem;
   }
 }
 
